# src/entities/query-store.ts
@@ -1,13 +1,11 @@
 import { BaseEntity, Column, Entity, PrimaryColumn } from 'typeorm';
-import { ConsumerRequestBody } from '../dtos/consumer/consumer-request-body';
-import { Locale } from '../enums/locale';
 import { ConsumerOptions } from '../interfaces/consumer-options';
 import { FactTableToDimensionName } from '../interfaces/fact-table-column-to-dimension-name';
 
 @Entity({ name: 'query-store' })
 export class QueryStore extends BaseEntity {
   // nanoid and returned the user
-  @PrimaryColumn({ type: 'string' })
+  @PrimaryColumn({ type: 'text' })
   id: string;
 
   // generated off the request object, so we don't end up
@@ -16,19 +14,19 @@ export class QueryStore extends BaseEntity {
   @Column({ name: 'hash', type: 'text', nullable: false })
   hash: string;
 
-  @Column({ name: 'dataset_id' })
+  @Column({ name: 'dataset_id', type: 'uuid' })
   datasetId: string;
 
-  @Column({ name: 'revision_id' })
+  @Column({ name: 'revision_id', type: 'uuid' })
   revisionId: string;
 
-  // The request object from the post request
+  // The request object from the post request, used to regenerate the entry
   @Column({ name: 'request_object', type: 'jsonb', nullable: false })
   requestObject: ConsumerOptions;
 
   // The resulting query for quicker playback
   @Column({ name: 'query', type: 'jsonb', nullable: false })
-  query: Map<Locale, string>;
+  query: Record<string, string>;
 
   @Column({ name: 'total_lines', type: 'int', nullable: false })
   totalLines: number;
